src/test/ui/async-await/issue-61076.stderr
error[E0277]: the `?` operator can only be applied to values that implement `std::ops::Try`
  --> $DIR/issue-61076.rs:22:5
   |
LL |     foo()?;
   |     ^^^^^^
   |     |
   |     the `?` operator cannot be applied to type `impl std::future::Future`
   |     help: consider using `.await` here: `foo().await?`
   |
   = help: the trait `std::ops::Try` is not implemented for `impl std::future::Future`
   = note: required by `std::ops::Try::into_result`

error[E0277]: the `?` operator can only be applied to values that implement `std::ops::Try`
  --> $DIR/issue-61076.rs:28:5
   |
LL |     t?;
   |     ^^
   |     |
   |     the `?` operator cannot be applied to type `T`
   |     help: consider using `.await` here: `t.await?`
   |
   = help: the trait `std::ops::Try` is not implemented for `T`
   = note: required by `std::ops::Try::into_result`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
